2006-01-19  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* itpp/base/window.{h,cpp}, tests/window_test.cpp: New files.
	Some code moved from base/specmat.{h,cpp}. Also added
	blackman() and increased the documentation.

2006-01-18  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* itpp/base/elmatfunc.h: Added log() for cvec and cmat.
	
	* itpp/base/filter_design.{h,cpp}: added 
	modified_yulewalker(), arma_estimator(), and yulewalk().

	* test/filter_design_test.{cpp,ref}: updated for new functions.
	
2006-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/schur.cpp, tests/schur_test.cpp: Fixed a bug that
	caused compilation error when LAPACK was not installed

	* itpp/base/matfunc.cpp (sqrtm): Removed unnecessary to_cmat()
	conversion

	* tests/matfunc_test.ref: Updated improper reference file

2006-01-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/*.cpp, tests/transforms_test.ref: Fixed incorrect
	preprocessor checks for defined external libraries. One reference
	file updated. (merged from itpp-3-9-branch)
	
	* itpp/base/transform.cpp: Fixed improper error messages (merged
	from itpp-3-9-branch)

	* configure.ac: Fixed a minor bug, which prevented disabling CBLAS
	support using `--without-cblas' configure switch (merged from
	itpp-3-9-branch)

2006-01-11  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/transforms.{h,cpp}: Added zero-padding for fft_real()
	  and ifft_real(). Also made all size input variables const.

	* itpp/base/poly.{h,cpp}: Added polyval() for vec and cvec input
	  combinations.

2006-01-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h,
	tests/matfunc_test.cpp, tests/matfunc_test.ref: Added sqrtm()
	function that calculates the matrix square root for real and
	complex matrices. Based on Octave implementation.

	* itpp/base/stat.cpp, itpp/base/stat.h: Added frob_norm()
	functions that calculate Frobenius norm of matrices
